# python-web-scraper-22

./: README.md  file.py  main.py  pyproject.toml
extractors/: indeed.py  wwr.py
templates/: home.html  search.html
