[tool.poetry]
name = "python-web-scraper-22"
version = "0.1.0"
description = ""
authors = ["qpthedev <qpthedev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_web_scraper_22"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
selenium = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
